--- a/.github/workflows/docker-image-app-k8s.yml
+++ b/.github/workflows/docker-image-app-k8s.yml
@@ -11,6 +11,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+#      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build -t milvo/app-k8s-graduate-work:$(date +%s) .
