--- a/.github/workflows/docker-image-app-k8s.yml
+++ b/.github/workflows/docker-image-app-k8s.yml
@@ -1,8 +1,8 @@
-name: Docker-Image-App-K8S
+name: Docker-Image-APP-K8S
 
 on:
   push:
-    branches: "main"
+    branches: "main" 
 
 jobs:
 
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v3
     - name: Build the Docker image
 #      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-      run: docker build -t milvo/app-k8s-graduate-work:$(date +%s) .
+      run: docker build . -t milvo/app-k8s-graduate-work:$(date +%s)
