--- a/.github/workflows/docker-image-app-k8s.yml
+++ b/.github/workflows/docker-image-app-k8s.yml
@@ -17,13 +17,13 @@ jobs:
       run: docker build --file Dockerfile --tag app-k8s-graduate-work:$(date +%s) .
     
     - name: Log in to Docker Hub
-      uses: docker/login-action@milvo/app-k8s-graduate-work
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@milvo/app-k8s-graduate-work
+      uses: docker/login-action@v3
       with:
         context: .
         file: ./Dockerfile
