--- a/.github/workflows/docker-image-app-k8s.yml
+++ b/.github/workflows/docker-image-app-k8s.yml
@@ -13,7 +13,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-#      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
       run: docker build --file Dockerfile --tag app-k8s-graduate-work:$(date +%s) .
     
     - name: Log in to Docker Hub
@@ -24,9 +23,14 @@ jobs:
 
     - name: Build and push Docker image
       uses: docker/login-action@v3
+#      with:
+#        context: .
+#        file: ./Dockerfile
+#        push: true
+#        tags: milvo/app-k8s-graduate-work
+#        labels: ${{ steps.meta.outputs.labels }}
       with:
         context: .
-        file: ./Dockerfile
         push: true
-        tags: milvo/app-k8s-graduate-work
-        labels: ${{ steps.meta.outputs.labels }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }
