--- a/.github/workflows/docker-image-app-k8s.yml
+++ b/.github/workflows/docker-image-app-k8s.yml
@@ -22,15 +22,10 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push Docker image
-      uses: docker/login-action@v3
-#      with:
-#        context: .
-#        file: ./Dockerfile
-#        push: true
-#        tags: milvo/app-k8s-graduate-work
-#        labels: ${{ steps.meta.outputs.labels }}
+      uses: docker/build-push-action@v5
       with:
         context: .
+        file: ./Dockerfile
         push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }
+        tags: milvo/app-k8s-graduate-work
+        labels: ${{ steps.meta.outputs.labels }}
