--- a/.github/workflows/docker-image-app-k8s.yml
+++ b/.github/workflows/docker-image-app-k8s.yml
@@ -28,5 +28,4 @@ jobs:
         file: ./Dockerfile
         push: true
         tags: milvo/app-k8s-graduate-work
-   #     labels: ${{ steps.meta.outputs.labels }}
-        labels: 0.2
+        labels: ${{ steps.meta.outputs.labels }}
