--- a/.github/workflows/docker-image-app-k8s.yml
+++ b/.github/workflows/docker-image-app-k8s.yml
@@ -36,5 +36,6 @@ jobs:
         file: ./Dockerfile
         push: true
  #       tags: milvo/app-k8s-graduate-work
-        tags: ${{ steps.meta.outputs.tags }}
+ #       tags: ${{ steps.meta.outputs.tags }}
+        tags: 0.2
         labels: ${{ steps.meta.outputs.labels }}
