--- a/.github/workflows/docker-image-app-k8s.yml
+++ b/.github/workflows/docker-image-app-k8s.yml
@@ -29,7 +29,7 @@ jobs:
 #        tags: latest
 #        labels: latest
         tags: |
-              type=raw,value=latest
+              type={{major}}.{{minor}},value=latest
               
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
