--- a/.github/workflows/docker-image-app-k8s.yml
+++ b/.github/workflows/docker-image-app-k8s.yml
@@ -29,7 +29,11 @@ jobs:
 #        tags: latest
 #        labels: latest
         tags: |
-              type=semver,pattern={{version}},value=v1.0.0
+              # type=semver,pattern={{version}},value=v1.0.0
+              # minimal
+              # type=pep440,pattern={{version}}
+              # use custom value instead of git tag
+              type=pep440,pattern={{version}},value=1.0.0
               
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
