--- a/.github/workflows/docker-image-app-k8s.yml
+++ b/.github/workflows/docker-image-app-k8s.yml
@@ -33,7 +33,7 @@ jobs:
               # minimal
               # type=pep440,pattern={{version}}
               # use custom value instead of git tag
-              type=pep440,pattern={{version}},value=1.0.0
+              type=pep440,pattern={{version}},value={{major}}.{{minor}}
               
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
