--- a/.github/workflows/docker-image-app-k8s.yml
+++ b/.github/workflows/docker-image-app-k8s.yml
@@ -33,7 +33,13 @@ jobs:
               # minimal
               # type=pep440,pattern={{version}}
               # use custom value instead of git tag
-              type=pep440,pattern={{version}},value={{major}}.{{minor}}
+              # type=pep440,pattern={{version}},value={{major}}.{{minor}}
+              type=ref,event=branch
+              type=sha
+              type=sha,prefix={{branch}}-
+              type=sha,format=long
+              type=sha,format=long,prefix={{branch}}-
+              type=raw,value=latest
               
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
