--- a/.github/workflows/docker-image-app-k8s.yml
+++ b/.github/workflows/docker-image-app-k8s.yml
@@ -34,11 +34,11 @@ jobs:
               # type=pep440,pattern={{version}}
               # use custom value instead of git tag
               # type=pep440,pattern={{version}},value={{major}}.{{minor}}
-              type=ref,event=branch
-              type=sha
+              # type=ref,event=branch
+              # type=sha
               type=sha,prefix={{branch}}-
-              type=sha,format=long
-              type=sha,format=long,prefix={{branch}}-
+              # type=sha,format=long
+              # type=sha,format=long,prefix={{branch}}-
               type=raw,value=latest
               
     - name: Build and push Docker image
